{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 26,
  "lineage": "8c398762-6f96-1bde-b72a-7b0f3bb33d3a",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myDBterraformnic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user11ResourceGroup/providers/Microsoft.Network/networkInterfaces/user11DBNIC",
            "ip_configuration": [
              {
                "name": "user11DBNicConfiguration",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user11ResourceGroup/providers/Microsoft.Network/virtualNetworks/user11Vnet/subnets/user11Subnet2"
              }
            ],
            "location": "koreasouth",
            "name": "user11DBNIC",
            "network_security_group_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user11ResourceGroup/providers/Microsoft.Network/networkSecurityGroups/user11DBNetworkSecurityGroup",
            "private_ip_address": "15.0.2.4",
            "private_ip_addresses": [
              "15.0.2.4"
            ],
            "resource_group_name": "user11ResourceGroup"
          },
          "depends_on": [
            "azurerm_network_security_group.myDBterraformnsg",
            "azurerm_resource_group.myterraformgroup",
            "azurerm_subnet.myterraformsubnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myterraformnic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user11ResourceGroup/providers/Microsoft.Network/networkInterfaces/user11NIC",
            "ip_configuration": [
              {
                "name": "user11NicConfiguration",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user11ResourceGroup/providers/Microsoft.Network/publicIPAddresses/user11PublicIP",
                "subnet_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user11ResourceGroup/providers/Microsoft.Network/virtualNetworks/user11Vnet/subnets/user11Subnet1"
              }
            ],
            "location": "koreasouth",
            "mac_address": "00-22-48-06-20-8A",
            "name": "user11NIC",
            "network_security_group_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user11ResourceGroup/providers/Microsoft.Network/networkSecurityGroups/user11NetworkSecurityGroup",
            "private_ip_address": "15.0.1.4",
            "private_ip_addresses": [
              "15.0.1.4"
            ],
            "resource_group_name": "user11ResourceGroup",
            "virtual_machine_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user11ResourceGroup/providers/Microsoft.Compute/virtualMachines/user11VM"
          },
          "depends_on": [
            "azurerm_network_security_group.myterraformnsg",
            "azurerm_public_ip.myterraformpublicip",
            "azurerm_resource_group.myterraformgroup",
            "azurerm_subnet.myterraformsubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myDBterraformnsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user11ResourceGroup/providers/Microsoft.Network/networkSecurityGroups/user11DBNetworkSecurityGroup",
            "location": "koreasouth",
            "name": "user11DBNetworkSecurityGroup",
            "resource_group_name": "user11ResourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DB",
                "priority": 2001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myterraformnsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user11ResourceGroup/providers/Microsoft.Network/networkSecurityGroups/user11NetworkSecurityGroup",
            "location": "koreasouth",
            "name": "user11NetworkSecurityGroup",
            "resource_group_name": "user11ResourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 2001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user11ResourceGroup/providers/Microsoft.Network/publicIPAddresses/user11PublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.231.153.248",
            "ip_version": "IPv4",
            "location": "koreasouth",
            "name": "user11PublicIP",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "user11ResourceGroup",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "15.0.1.0/24",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user11ResourceGroup/providers/Microsoft.Network/virtualNetworks/user11Vnet/subnets/user11Subnet1",
            "ip_configurations": [
              "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user11ResourceGroup/providers/Microsoft.Network/networkInterfaces/user11NIC/ipConfigurations/user11NicConfiguration"
            ],
            "name": "user11Subnet1",
            "resource_group_name": "user11ResourceGroup",
            "virtual_network_name": "user11Vnet"
          },
          "depends_on": [
            "azurerm_resource_group.myterraformgroup",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubnet2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "15.0.2.0/24",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user11ResourceGroup/providers/Microsoft.Network/virtualNetworks/user11Vnet/subnets/user11Subnet2",
            "ip_configurations": [
              "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user11ResourceGroup/providers/Microsoft.Network/networkInterfaces/user11DBNIC/ipConfigurations/user11DBNicConfiguration"
            ],
            "name": "user11Subnet2",
            "resource_group_name": "user11ResourceGroup",
            "virtual_network_name": "user11Vnet"
          },
          "depends_on": [
            "azurerm_resource_group.myterraformgroup",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myterraformnetwork",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "15.0.0.0/16"
            ],
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user11ResourceGroup/providers/Microsoft.Network/virtualNetworks/user11Vnet",
            "location": "koreasouth",
            "name": "user11Vnet",
            "resource_group_name": "user11ResourceGroup",
            "subnet": [
              {
                "address_prefix": "15.0.1.0/24",
                "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user11ResourceGroup/providers/Microsoft.Network/virtualNetworks/user11Vnet/subnets/user11Subnet1",
                "name": "user11Subnet1"
              },
              {
                "address_prefix": "15.0.2.0/24",
                "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user11ResourceGroup/providers/Microsoft.Network/virtualNetworks/user11Vnet/subnets/user11Subnet2",
                "name": "user11Subnet2"
              }
            ],
            "tags": {
              "environment": "Team5 Vnet"
            }
          },
          "depends_on": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    }
  ]
}